Translate content of site into Espanol #5

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <ul class="nav sidenav">
         <li><a href="#whatisopendata">¿Qué son los datos abiertos?</a></li>
         <li><a href="#whyopendata">¿Por qué datos abiertos?</a></li>
-        <li><a href="#petition">Firma la peticion</a></li>
+        <li><a href="#petition">Firma la petición</a></li>
         <li>
           <a href="#benefits">Beneficios</a>
           <ul class="nav">
@@ -58,20 +58,20 @@
       <!--<a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a>-->
     </h2>
     <section>
-      <p>Datos abiertos se refiere a los datos (como documentos, bases de datos, registros o trnascripciones, incluyendo los gestionados por proveedores externos) liberados por un gobierno u organizacion que cumplan:</p>
+      <p>Datos abiertos se refiere a los datos (como documentos, bases de datos, registros o transcripciones, incluyendo los gestionados por proveedores externos) liberados por un gobierno u organizacion que estén:</p>
       <ul>
         <li><strong>Disponible libremente</strong> para ser usado, compartido, y reutilizado por cualquier persona, para cualquier propósito, comercial o no.</li>
-        <li><strong>Disponible en formato digital, legibles por máquinas</strong> (como json) de modo que se puede utilizar en combinación con otros datos y aplicaciones.</li>
-        <li><strong>Disponible en su totalidad</strong> — y capaz de ser descargado "a granel", y no sólo recuperar manualmente registro por registro.</li>
+        <li><strong>Disponible en formato digital, legibles por máquinas</strong> (por ejemplo en formato json) de modo que se pueda utilizar en combinación con otros datos y aplicaciones.</li>
+        <li><strong>Disponible en su totalidad</strong> — y capaz de ser descargado "en lotes", y no sólo descargado manualmente registro por registro.</li>
       </ul>
     </section>
     <h2 id="whyopendata" class="page-header">¿Por qué Miami-Dade necesita una política de Datos Abiertos?</h2>
     <section>
-      <p>Información acerca de nuestro condado y las ciudades se encuentran entre los mayores activos públicos de nuestros gobiernos. Mientras que el Condado de Miami-Dade y muchos municipios, <a href="http://us-city.census.okfn.org/">tienen datos significativos disponibles,</a> estamos detras de otros condados y ciudades de nuestro tamaño, en la disponibilidad de los datos y frecuencia en los que son actualizados. También carecemos de un repositorio centralizado de datos para facilitar el acceso a nuestros datos. La adopción de una política de datos abiertos formal es el primer paso para hacer que la información del gobierno local sea accesible y fácil de usar, y la única forma en que se podría aprovechar sistemáticamente los beneficios de un verdadero ecosistema de datos abiertos.</p>
+      <p>Información acerca de nuestro condado y las ciudades se encuentran entre los mayores activos públicos de nuestros gobiernos. Mientras que el Condado de Miami-Dade y muchos municipios, <a href="http://us-city.census.okfn.org/">tienen datos significativos disponibles,</a> estamos atrasados con respecto a otros condados y ciudades de nuestro tamaño, en la disponibilidad de los datos y frecuencia en los que son actualizados. También carecemos de un repositorio centralizado de datos para facilitar el acceso a nuestra información. La adopción de una política de datos abiertos formal es el primer paso para hacer que la información del gobierno local sea accesible y fácil de usar, y la única forma en que se podría aprovechar y beneficiarse de un verdadero ecosistema de datos abiertos.</p>
     </section>
 
     <section id="petition" class="petition">
-      <h3>¿Convencido de apoyar de datos abierta en Miami?</h3>
+      <h3>¿Convencido de apoyar los Datos Abiertos en Miami?</h3>
       <div>
         <a href="#petition-form" class="petition-yes">Si.</a>
         <a href="#benefits" class="petition-no">Aun no.</a>
@@ -81,7 +81,7 @@
     <h1 id="benefits" class="page-header">Beneficios de los Datos Abiertos</h1>
     <section>
       <h2 id="transparency">Transparencia y Rendición de Cuentas</h2>
-      <p>Tener políticas y procesos formales para conocer los datos abiertos pueden ayudar a los residentes a comprender mejor los asuntos cívicos importantes en sus comunidades, incluyendo los gastos, el desarrollo económico, los servicios, energía, transporte, infraestructura y crimen. Directrices formales también pueden mejorar a <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">salvaguardar la información confidencial sobre individuos</a> a largo plazo.</p>
+      <p>Tener políticas y procesos formales para conocer los datos abiertos pueden ayudar a los residentes a comprender mejor los asuntos cívicos importantes en sus comunidades, incluyendo los gastos, desarrollo económico, los servicios, energía, transporte, infraestructura y crimen. Directrices formales también pueden mejorar a <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">salvaguardar la información confidencial sobre individuos</a> a largo plazo.</p>
       <p><strong>Ejemplos:</strong></p>
       <ul>
         <li><a href="http://hbswk.hbs.edu/item/7393.html">Boston: Aumentando la confianza entre el gobierno y los residentes</a>
@@ -90,7 +90,7 @@
         <li><a href="http://sanfrancisco.crimespotting.org/">San Francisco: Mapeo del crimen</a></li>
       </ul>
       <h2 id="efficiency">Eficiencia y Mejoras de servicios</h2>
-      <p>Los Datos Abiertos permiten a diferentes departamentos del gobierno, así como los residentes formas de monitorear las tendencias y necesidades de forma más rápida y eficaz, disminuyendo los costos y mejorar los servicios básicos.</p>
+      <p>Los Datos Abiertos permiten a diferentes departamentos del gobierno, así como los residentes, formas de monitorear las tendencias y necesidades de manera más rápida y eficaz, disminuyendo los costos y mejorando los servicios básicos.</p>
       <p><strong>Ejemplos:</strong></p>
       <ul>
         <li><a href="http://www.baltimorecity.gov/311-services">Baltimore: Seguimiento y presentación de informes de solicitudes al 311</a></li>
@@ -100,8 +100,8 @@
         <li><a href="http://www.smc-connect.org/">Ayuntamiento de San Mateo: Agregación de servicios comunitarios</a></li>
       </ul>
       <h2 id="innovation">Innovación y Desarrollo económico</h2>
-      <p>Los Datos Abiertos proporcionan información valiosa para nuestras industrias prósperas que pueden propulsar a Miami hacia adelante como un líder en la innovación cívica y empresarial.</p>
-      <p><strong>Examples:</strong></p>
+      <p>Los Datos Abiertos proporcionan información valiosa para que nuestras industrias puedan propulsar a Miami hacia adelante como un líder en la innovación cívica y empresarial.</p>
+      <p><strong>Ejemplos:</strong></p>
       <ul>
         <li><a href="http://www.opendata500.com/"> The Open Data 500: Las mejores empresas estadounidenses basadas en datos abiertos</a></li>
         <li> <a href="http://www.trulia.com/">Trulia: Dando a compradores, vendedores y arrendatarios mejores herramientas para encontrar un hogar</a></li>
@@ -115,7 +115,7 @@
     </section>
     <h1 id="cost" class="page-header">¿Cuánto costará?</h1>
     <section>
-      <p>"Ha habido una serie de números presupuestados adjuntos a la legislación para la financiación de los esfuerzos de datos abiertos. En general, puede el costo puede ir desde $ 0 (si nadie es contratado y no se necesita dinero adicional para la tecnología) a $ 500.000 (para la contratación de nuevo personal y la adopción de nueva tecnología) puede ser presupuestado para la ciudad, el estado, o las iniciativas de datos abiertos federales. La financiación debe ser considerada para, pero no limitado a la posibilidades de contratar nuevo personal de software (administrativo, técnico y jurídico), nuevo sotfware (para albergar, extraer e ingresar los datos), formación y mantenimiento de servidores. Será importante que cada jurisdicción considere lo que necesite para apoyar un fuerte ecosistema de datos abiertos."</p>
+      <p>"Ha habido una serie de números presupuestados adjuntos a la legislación para la financiación de los esfuerzos de datos abiertos. En general, puede el costo puede ir desde $ 0 (si nadie es contratado y no se necesita dinero adicional para la tecnología) a $ 500.000 (para la contratación de nuevo personal y la adopción de nuevas tecnologías) puede ser presupuestado para la ciudad, el estado, o las iniciativas de datos abiertos federales. La financiación debe ser considerada para, pero no limitado, a la posibilidades de contratar nuevo personal de software (administrativo, técnico y jurídico), nuevo sotfware (para albergar, extraer e ingresar los datos), formación y mantenimiento de servidores. Será importante que cada jurisdicción considere lo que necesite para apoyar un fuerte ecosistema de datos abiertos."</p>
       <p><em><a href="http://sunlightfoundation.com/policy/opendatafaq/#cost">&#8212;De Sunlight Foundation Open Data FAQ</a></em></p>
     </section>
     <h1 id="resources" class="page-header">Recursos Adicionales</h1>
