--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Miami Open Data Policy</title>
+  <title>Miami-Dade Open Data Policy</title>
 
   <!--Stylesheet-->
   <link href="css/main.css" rel="stylesheet">
