--- a/index-es.html
+++ b/index-es.html
@@ -23,8 +23,8 @@
   <div class="cover-content">
     <h1>Miami<span class="brand-second">OpenData</span></h1>
     <p class="lead">Taking steps towards the future one dataset at a time.</p>
-    <a class="btn btn-primary btn-lg" href="#whatisopendata">Tell Me More</a>
-    <a class="btn btn-primary btn-lg" href="#petition-form">I Support Open Data</a>
+    <a class="btn btn-primary btn-lg" href="#whatisopendata">Vea el Porque</a>
+    <a class="btn btn-primary btn-lg" href="#petition-form">Yo Apoyo el Open Data</a>
 
   </div>
 </div>
@@ -32,20 +32,20 @@
   <div class="col-md-3">
     <div class="sidebar hidden-print hidden-xs hidden-sm affix-top" role="complementary">
       <ul class="nav sidenav">
-        <li><a href="#whatisopendata">What Is Open Data?</a></li>
-        <li><a href="#whyopendata">Why Open Data?</a></li>
-        <li><a href="#petition">Sign Petition</a></li>
+        <li><a href="#whatisopendata">Que es Open Data?</a></li>
+        <li><a href="#whyopendata">Porque es Importante el Open Data?</a></li>
+        <li><a href="#petition">Firmar Peticion</a></li>
         <li>
-          <a href="#benefits">Benefits</a>
+          <a href="#benefits">Beneficios</a>
           <ul class="nav">
-            <li><a href="#transparency">Transparency</a></li>
-            <li><a href="#efficiency">Efficiency</a></li>
-            <li><a href="#innovation">Innovation</a></li>
+            <li><a href="#transparency">Transpariencia</a></li>
+            <li><a href="#efficiency">Eficiencia</a></li>
+            <li><a href="#innovation">Innovacion</a></li>
           </ul>
         </li>
-        <li><a href="#examples">Examples</a></li>
-        <li><a href="#cost">Cost</a></li>
-        <li><a href="#resources">Resources</a></li>
+        <li><a href="#examples">Ejemplos</a></li>
+        <li><a href="#cost">Costo</a></li>
+        <li><a href="#resources">Recursos</a></li>
       </ul>
       <a class="back-to-top" href="#top">
         Back to top
