add missing translations

--- a/index-es.html
+++ b/index-es.html
@@ -40,7 +40,7 @@
           <ul class="nav">
             <li><a href="#transparency">Transpariencia</a></li>
             <li><a href="#efficiency">Eficiencia</a></li>
-            <li><a href="#innovation">Innovacion</a></li>
+            <li><a href="#innovation">Innovación</a></li>
           </ul>
         </li>
         <li><a href="#examples">Ejemplos</a></li>
@@ -71,10 +71,10 @@
     </section>
 
     <section id="petition" class="petition">
-      <h3>Convinced to support open data in Miami?</h3>
+      <h3>Estas convencido de apoyar el Open Data en Miami?</h3>
       <div>
-        <a href="#petition-form" class="petition-yes">Yes.</a>
-        <a href="#benefits" class="petition-no">Not yet.</a>
+        <a href="#petition-form" class="petition-yes">Si.</a>
+        <a href="#benefits" class="petition-no">Todavia no.</a>
       </div>
     </section>
 
@@ -131,20 +131,20 @@
     </section>
 
     <section id="petition-form" class="petition">
-      <h3>Sign on as a supporter</h3>
+      <h3>Firma la petición</h3>
       <form
         class="form-petition" accept-charset="UTF-8" action="https://formkeep.com/f/9a5e8d0c6401" method="POST">
   <input type="hidden" name="utf8" value="✓">
-        <input type="text" name="firstname" required placeholder="First Name">
-        <input type="text" name="lastname" required placeholder="Last Name">
-        <input type="email" name="email" required placeholder="Email">
-        <input type="number" name="zipcode" required placeholder="Zip Code">
-        <button type="submit">Sign Up</button>
+        <input type="text" name="firstname" required placeholder="Nombre">
+        <input type="text" name="lastname" required placeholder="Apellido">
+        <input type="email" name="email" required placeholder="Correo Electronico">
+        <input type="number" name="zipcode" required placeholder="Codigo Postal">
+        <button type="submit">Firma</button>
       </form>
       <div>
         <hr>
         <!-- <p>We will send you updates about the Open Data Policy in Miami.</p> -->
-        <small><em>We care about your privacy, we won't share your information.</em></small>
+        <small><em>Su privacidad es importante para nosotros, no compartiremos su información.</em></small>
       </div>
     </section>
   </div>
@@ -153,7 +153,7 @@
 </div>
 <div class="footer">
   <div class="container">
-        Built with <span class="glyphicon glyphicon-heart"></span> by <a href="http://codeformiami.org/"><span style="color: deepskyblue">Code </span><span style="color: #cf1b41">For Miami</span></a>
+        Creado con <span class="glyphicon glyphicon-heart"></span> by <a href="http://codeformiami.org/"><span style="color: deepskyblue">Code </span><span style="color: #cf1b41">For Miami</span></a>
     </div>
   </div>
 
