Fix #23 - add language link

--- a/index-es.html
+++ b/index-es.html
@@ -20,6 +20,7 @@
 </head>
 <body>
   <div class="cover">
+    <a class="lang" href="index.html">English</a>
     <div class="cover-content">
       <h1>Miami<span class="brand-second">OpenData</span></h1>
       <p class="lead">Taking steps towards the future one dataset at a time.</p>
