--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="cover">
   <div class="cover-content">
     <h1>Miami<span class="brand-second">OpenData</span></h1>
-    <p class="lead">Taking steps towards the future one dataset at a time.</p>
+    <p class="lead">Taking steps towards our future, one dataset at a time.</p>
     <a class="btn btn-primary btn-lg" href="#whatisopendata">Tell Me More</a>
     <a class="btn btn-primary btn-lg" href="#petition-form">I Support Open Data</a>
 
