Add icons to headings

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
   <div id="start" class="col-md-9">
     <h2 id="whatisopendata" class="page-header">
-      What is Open Data
+      <i class="glyphicon glyphicon-stats"></i>What is Open Data
       <!--<a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a>-->
     </h2>
     <section>
@@ -66,7 +66,9 @@
         <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
       </ul>
     </section>
-    <h2 id="whyopendata" class="page-header">Why does Miami-Dade need an open data policy?</h2>
+    <h2 id="whyopendata" class="page-header">
+      <i class="glyphicon glyphicon-question-sign"></i>Why does Miami-Dade need an open data policy?
+    </h2>
     <section>
       <p>Information about our county and cities are among our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem.</p>
     </section>
@@ -79,7 +81,9 @@
       </div>
     </section>
 
-    <h1 id="benefits" class="page-header">Benefits of Open Data</h1>
+    <h2 id="benefits" class="page-header">
+      <i class="glyphicon glyphicon-star"></i>Benefits of Open Data
+    </h2>
     <section>
       <h2 id="transparency">Transparency &amp; Accountability</h2>
       <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p>
@@ -110,16 +114,22 @@
         <li><a href="http://en.seeclickfix.com/">SeeClickFix: Streamlining and leveraging 311 data</a></li>
       </ul>
     </section>
-    <h1 id="examples" class="page-header">Examples of local open data policies</h1>
+    <h2 id="examples" class="page-header">
+      <i class="glyphicon glyphicon-paperclip"></i>Examples of local open data policies
+    </h2>
     <section>
       <script src="https://embed.github.com/view/geojson/sunlightpolicy/opendata/master/USlocalpolicylocations.geoJSON"></script>
     </section>
-    <h1 id="cost" class="page-header">How much will it cost?</h1>
+    <h2 id="cost" class="page-header">
+      <i class="glyphicon glyphicon-usd"></i>How much will it cost?
+    </h2>
     <section>
       <p>"There has been a range of budgeted numbers attached to legislation for funding open data efforts. Generally, anywhere from $0 (if no one is hired and no additional money is needed for technology) to $500,000 (for hiring new staff and adopting new technology) may be budgeted for city, state, or federal open data initiatives. Funding should be considered for—but not limited to—the potential of new staff (administrative, technical and legal), new software (to house, extract and input data), training, and server maintenance. It will be important for each jurisdiction to consider what it needs to support a strong open data ecosystem."</p>
       <p><em><a href="http://sunlightfoundation.com/policy/opendatafaq/#cost">&#8212;From Sunlight Foundation Open Data FAQ</a></em></p>
     </section>
-    <h1 id="resources" class="page-header">Additional Resources</h1>
+    <h2 id="resources" class="page-header">
+      <i class="glyphicon glyphicon-plus"></i>Additional Resources
+    </h2>
     <section>
       <ul>
         <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
