General styling and layout updates

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <i class="glyphicon glyphicon-star"></i>Benefits of Open Data
     </h2>
     <section>
-      <h2 id="transparency">Transparency &amp; Accountability</h2>
+      <h2 id="transparency" class="page-subheader">Transparency &amp; Accountability</h2>
       <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p>
       <p><strong>Examples:</strong></p>
       <ul>
@@ -94,7 +94,7 @@
         <li><a href="http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/"> New York City: Targeting Illegal Building Conversions Inspections</a>
         <li><a href="http://sanfrancisco.crimespotting.org/">San Francisco: Mapping crime</a></li>
       </ul>
-      <h2 id="efficiency">Efficiency &amp; Service improvements</h2>
+      <h2 id="efficiency" class="page-subheader">Efficiency &amp; Service improvements</h2>
       <p>Open data allows different departments in a government as well as residents to monitor trends and needs more quickly and effectively, decreasing costs and improving core services.</p>
       <p><strong>Examples:</strong></p>
       <ul>
@@ -104,7 +104,7 @@
         <li><a href="http://blightstatus.nola.gov/">New Orleans: Monitoring and reporting blight</a></li>
         <li><a href="http://www.smc-connect.org/">San Mateo County: Aggregating community services</a></li>
       </ul>
-      <h2 id="innovation">Innovation &amp; Economic Development</h2>
+      <h2 id="innovation" class="page-subheader">Innovation &amp; Economic Development</h2>
       <p>Open data provides valuable information to our thriving industries that can propel Miami forward as a leader in both civic innovation and business.</p>
       <p><strong>Examples:</strong></p>
       <ul>
