adding dynamic list of supporters

--- a/index.html
+++ b/index.html
@@ -157,8 +157,12 @@
         <small><em>We care about your privacy, we won't share your email.</em></small>
       </div>
     </section>
-<section>
-      <h3>Thank You to those that have supported us</h3>
+
+    <h2 id="thanks" class="page-header">
+      <i class="glyphicon glyphicon-thumbs-up"></i>Thank You to those that have supported us
+    </h2>
+    <section>
+      
         <ul id="signupList"> 
         </ul>
     </section> 
