--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <p class="lead">Taking steps towards our future, one dataset at a time.</p>
     <a class="btn btn-primary btn-lg" href="#whatisopendata">Tell Me More</a>
     <a class="btn btn-primary btn-lg" href="#petition-form">I Support Open Data</a>
+    <a class="btn btn-primary btn-lg" href="docs/open-data-letter.pdf">Open letter to Mayor Gimenez</a>
 
   </div>
 </div>
